added basic HTML

--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
     <title>world clock</title>
   </head>
   <body>
-    <h1>World clock</h1>
+    <div class="container">
+      <h1>World clock</h1>
+      <select name="city" id="city">
+        <option value="">select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+      </select>
+      <div class="city">
+        <h2>Los angeles</h2>
+        <div class="date">August 15th 2023</div>
+        <div class="time">1:20:32 AM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by
-      <a href="https://github.com/khaoula-ms"> Khaoula Messaoudi </a>and
-      open-sourced on
-      <a href="https://github.com/khaoula-ms/world-clock">Github</a>.
+      <a href="https://github.com/khaoula-ms" target="_blank">
+        Khaoula Messaoudi </a
+      >and open-sourced on
+      <a href="https://github.com/khaoula-ms/world-clock" target="_blank"
+        >Github</a
+      >.
     </footer>
     <script src="src/index.js"></script>
   </body>
