--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class="date">August 15th 2023</div>
         <div class="time">1:20:32 AM</div>
       </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 15th 2023</div>
+        <div class="time">1:20:32 AM</div>
+      </div>
     </div>
     <footer>
       This project was coded by
