styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
         <option value="">Tokyo</option>
       </select>
       <div class="city">
-        <h2>Los angeles</h2>
-        <div class="date">August 15th 2023</div>
-        <div class="time">1:20:32 AM</div>
+        <div class="city-name">
+          <h2>Los angeles</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:20:32 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 15th 2023</div>
-        <div class="time">1:20:32 AM</div>
+        <div class="city-name">
+          <h2>Sydney</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:20:32 <small>AM</small></div>
       </div>
     </div>
     <footer>
       This project was coded by
       <a href="https://github.com/khaoula-ms" target="_blank">
-        Khaoula Messaoudi </a
+        <strong> Khaoula Messaoudi</strong> </a
       >and open-sourced on
       <a href="https://github.com/khaoula-ms/world-clock" target="_blank"
         >Github</a
