added java script for 2 cities

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>world clock</title>
   </head>
@@ -15,19 +17,19 @@
         <option value="">New York</option>
         <option value="">Tokyo</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div class="city-name">
           <h2>Los angeles</h2>
-          <div class="date">August 15th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:20:32 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="sydney">
         <div class="city-name">
           <h2>Sydney</h2>
-          <div class="date">August 15th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:20:32 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
