--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
   <body>
     <div class="container">
       <h1>World clock</h1>
-      <select name="city" id="city">
+      <select name="cities" id="cities">
         <option value="">select a city..</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div class="city-name">
-          <h2>Los angeles</h2>
-          <div class="date"></div>
+      <div class="attached-cities" id="attached-cities">
+        <div class="city" id="los-angeles">
+          <div class="city-name">
+            <h2>Los angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="sydney">
-        <div class="city-name">
-          <h2>Sydney</h2>
-          <div class="date"></div>
+        <div class="city" id="sydney">
+          <div class="city-name">
+            <h2>Sydney</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
