--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>World clock</h1>
       <select name="cities" id="cities">
         <option value="">select a city..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Tokyo">Tokyo</option>
