added other cities

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <select name="cities" id="cities">
         <option value="">select a city..</option>
         <option value="current">My current location</option>
+        <option value="Africa/Tunis">Tunis</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Tokyo">Tokyo</option>
@@ -29,6 +30,13 @@
         <div class="city" id="sydney">
           <div class="city-name">
             <h2>Sydney</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="seoul">
+          <div class="city-name">
+            <h2>Seoul</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
